fix: btn-toolbar alignment

--- a/styles/terminus.less
+++ b/styles/terminus.less
@@ -57,7 +57,7 @@
       padding: 0.375em;
 
       .btn-toolbar {
-        padding: 0.375em;
+        padding: 0.25em 0.375em 0.375em;
 
         .left {
           float: left;
